--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav navigation-words">
                         <a class="nav-link" href="#about-container">About Us</a>
-                        <a class="nav-link" href="#portfolio-container">Portfolio</a>
+                        <a class="nav-link" href="#portfolio-container">Our Clients</a>
                         <a class="nav-link" href="#pricing-container">Pricing</a>
                         <a class="nav-link" href="#customer-container">Customer's Review</a>
                         <a href="#contact-top-container"><img
@@ -86,11 +86,16 @@
 
     <div id="portfolio-container" class="component">
         <div class="sub-heading-white" style="margin-bottom: 30px;">OUR<br>CLIENTS</div>
-        <div class="client-img-container">
-            <img class="client-img" src="./gallery/Heparen-Dark-Blue.png" alt="heparen logo">
-        </div>
-        <div class="client-img-container">
-            <img class="client-img" src="./gallery/Pt. GRESIK JASATAMA-04.png" alt="GJT logo">
+        <div class="client-container">
+            <div class="client-img-container">
+                <img class="client-img" src="./gallery/Resize Logo/Heparen (300x200px).jpg" alt="heparen logo">
+            </div>
+            <div class="client-img-container">
+                <img class="client-img" src="./gallery/Resize Logo/PT Gresik Jasatama (300x200px).jpg" alt="GJT logo">
+            </div>
+            <div class="client-img-container">
+                <img class="client-img" src="./gallery/Resize Logo/SKG (300x200px).jpg" alt="SKG logo">
+            </div>
         </div>
     </div>
 
@@ -109,6 +114,7 @@
                     <p><span class="tick-mark">&#10003;</span>1 Web Layout Design</p>
                     <p><span class="cross-mark">&#10060;</span>Responsive Web</p>
                     <p><span class="cross-mark">&#10060;</span>Animation</p>
+                    <p><span class="cross-mark">&#10060;</span>Free 1 Year Maintenance</p>
                 </div>
                 <div>
                     <span>IDR 8.000.000</span>
@@ -129,6 +135,7 @@
                     <p><span class="tick-mark">&#10003;</span>3 Web Layout Design Choices</p>
                     <p><span class="tick-mark">&#10003;</span>Responsive Web</p>
                     <p><span class="tick-mark">&#10003;</span>Animation</p>
+                    <p><span class="tick-mark">&#10003;</span>Free 1 Year Maintenance</p>
                 </div>
                 <div>
                     <span>IDR 10.000.000</span>
@@ -149,6 +156,7 @@
                     <p><span class="tick-mark">&#10003;</span>3 Web Layout Design Choices</p>
                     <p><span class="tick-mark">&#10003;</span>Responsive Web</p>
                     <p><span class="tick-mark">&#10003;</span>Animation</p>
+                    <p><span class="tick-mark">&#10003;</span>Free 1 Year Maintenance</p>
                 </div>
                 <div>
                     <span>IDR 20.000.000</span>
@@ -176,7 +184,6 @@
             <div class="carousel-inner">
                 <div class="carousel-item  carousel-customer active">
                     <div class="card bg-transparent customer-card border-0">
-                        <img src="./gallery/irenesetiawan.jpg" alt="" class="customer-image">
                         <div class="card-body review-text">
                             <h3 class="card-title">dr.Irene Setiawan</h3>
                             <p>Founder of Heparen</p>
@@ -187,23 +194,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item carousel-customer">
+                <div class="carousel-item  carousel-customer">
                     <div class="card bg-transparent customer-card border-0">
-                        <img src="./gallery/irenesetiawan.jpg" alt="" class="customer-image">
                         <div class="card-body review-text">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h3 class="card-title">Daniel Adryanto</h3>
+                            <p>Manager of PT Gresik Jasatama</p>
+                            <p class="card-text">"With the growing of technology everyday, we realized that even our
+                                business sector as port operation also need a company website. Dilyn Tech really went
+                                beyond to make sure that we are satisfied with the result. Their team is open during
+                                discussion and very initiative"</p>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item carousel-customer">
+                <div class="carousel-item  carousel-customer">
                     <div class="card bg-transparent customer-card border-0">
-                        <img src="./gallery/irenesetiawan.jpg" alt="" class="customer-image">
                         <div class="card-body review-text">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h3 class="card-title">Gerry Gunawan</h3>
+                            <p>Director of CV Sinawa Karya Global</p>
+                            <p class="card-text">"Good web design, even when I don't have any idea about the design,
+                                Dilyn Tech provided me with some examples to choose from. The website can be revised
+                                until it meets with my expectations. Thank you Dilyn Tech! I will surely use their
+                                service again"</p>
                         </div>
                     </div>
                 </div>
@@ -236,25 +247,24 @@
         </div>
         <div class="contact-right-column">
             <div class="contact-social-media">
-                <img src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/IG-Button.png" alt="instagram logo">
+                <a target="_blank" href="https://www.instagram.com/dilyn_tech/"><img
+                        src="./gallery/Crop PNG/Contact Us/IG-Icon.png" alt="instagram logo"></a>
                 <a target="_blank"
                     href="https://wa.me/628118201995?text=I'm%20interested%20in%20your%20website%20service"><img
-                        src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/WA-Button.png" alt="WA Logo"></a>
-                <a href="mailto:dilyn.tech.indonesia@gmail.com"><img
-                        src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/E-mail-Button.png"
+                        src="./gallery/Crop PNG/Contact Us/WA-Icon.png" alt="WA Logo"></a>
+                <a href="mailto: dilyn.tech.indonesia@gmail.com"><img src="./gallery/Crop PNG/Contact Us/Email-Icon.png"
                         alt="email logo"></a>
             </div>
             <div class="contact-info">
                 <h5>INSTAGRAM</h5>
-                <h6>@lorem</h6>
+                <h6>@dilyn_tech</h6>
                 <h5>WHATSAPP</h5>
                 <h6>+628118201995</h6>
                 <h5>EMAIL</h5>
                 <h6>dilyn.tech.indonesia@gmail.com</h6>
             </div>
             <div class="computer-image-container">
-                <img src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/Computer-Vector.png"
-                    alt="computer logo">
+                <img src="./gallery/Crop PNG/Contact Us/Computer-Icon.png" alt="computer logo">
             </div>
         </div>
     </div>
@@ -269,12 +279,12 @@
                 <div class="footer-social-media">
                     <h6>Quick Links</h6>
                     <div class="footer-social-container">
-                        <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/IG-Icon.png" alt="IG Icon">
+                        <a target="_blank" href="https://www.instagram.com/dilyn_tech/"><img
+                                src="./gallery/Crop PNG/Quick Links/Instagram-Icon.png" alt="IG Icon"></a>
                         <a href="https://wa.me/628118201995?text=I'm%20interested%20in%20your%20website%20service"><img
-                                src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/WA-Icon.png"
-                                alt=" WA Icon"></a>
-                        <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/E-mail-Icon.png"
-                            alt="Email Icon">
+                                src="./gallery/Crop PNG/Quick Links/WhatsApp-Icon.png" alt=" WA Icon"></a>
+                        <a href="mailto: dilyn.tech.indonesia@gmail.com"><img
+                                src="./gallery/Crop PNG/Quick Links/E-mail-Icon.png" alt="Email Icon"></a>
                     </div>
                 </div>
                 <div class="quick-links-inside-container">
@@ -287,7 +297,7 @@
                         <a href="#customer-container">Customer's Review</a>
                     </div>
                     <div class="quick-links">
-                        <a href="#portfolio-container">Portfolio</a>
+                        <a href="#portfolio-container">Our Clients</a>
                         <a href="#contact-top-container">Contact Us</a>
                     </div>
                 </div>
