--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                         <div class="card-body review-text">
                             <h3 class="card-title">Gerry Gunawan</h3>
                             <p>Director of CV Sinawa Karya Global</p>
-                            <p class="card-text">"Good web design, even when I don't have any idea about the design,
-                                Dilyn Tech provided me with some examples to choose from. The website can be revised
-                                until it meets with my expectations. Thank you Dilyn Tech! I will surely use their
-                                service again"</p>
+                            <p class="card-text">"It was fun working together with Dilyn Tech. It was really helpful by
+                                providing the sample of logo design and web layout design before start building the real
+                                products. We can change things around during the draftstep, before starting the website
+                                built-up. I wish good luck to Dilyn Tech"</p>
                         </div>
                     </div>
                 </div>
